# fluxvis

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  fluxvis.ipynb  fluxvis.ipynb.license  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  release.yml
.reuse/: dep5
etc/: disk.jpg.license  update-img.sh
fluxvis/: __init__.py  __main__.py  a2rchery.py  invpolar.py  notebook.py
fluxvis/greaseweazle/: flux.py  track.py
fluxvis/greaseweazle/codec/: formats.py
fluxvis/greaseweazle/codec/amiga/: amigados.py
fluxvis/greaseweazle/codec/ibm/: mfm.py
fluxvis/greaseweazle/image/: acorn.py  adf.py  d81.py  edsk.py  hfe.py  image.py  img.py  ipf.py  kryoflux.py  scp.py  sf7.py
fluxvis/greaseweazle/tools/: util.py
