# SPDX-FileCopyrightText: 2022 Jeff Epler for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}
dependencies = {file = "requirements.txt"}

[tool.setuptools_scm]
write_to = "fluxvis/__version__.py"

[project]
name = "fluxvis"
dynamic = ["readme","version","dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"

[project.scripts]
fluxvis = "fluxvis.__main__:main"
