# SPDX-FileCopyrightText: 2022 Jeff Epler for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[metadata]
name = fluxvis
author = Jeff Epler for Adafruit Industries
author_email = jeff@adafruit.com
description = Visualize floppy disk flux patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adafruit/fluxvis
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =.
packages =
    fluxvis
    fluxvis.greaseweazle
    fluxvis.greaseweazle.image
    fluxvis.greaseweazle.codec
    fluxvis.greaseweazle.tools
python_requires = >=3.7
install_requires =
    numpy
    scikit_image

[options.entry_points]
console_scripts =
    fluxvis = fluxvis.__main__:main
